--- a/resultats/cartes.html
+++ b/resultats/cartes.html
@@ -220,7 +220,6 @@
 
 
 
-
 <!-- -------- Header ------- -->
 <header>
   <div class="page-header min-vh-50">
@@ -279,14 +278,6 @@
   </div><!-- container -->
 
 
-
-
-
-
-
-
-
-
   <div class="container">
     <div class="row">
  
@@ -335,20 +326,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="container">
     <div class="row">
  
@@ -359,6 +336,10 @@
             Enfin, des cartes par type de source ont été produites pour les quatre sources sonores suivantes : animaux, trafic ferroviaire, trafic aérien et trafic routier. Ces sources sonores ont été sélectionnées parce qu'elles sont liées à la perception de l'agrément sonore.<br>
             Pour chacune de ces quatre sources sonores, pour chaque hexagone de cette grille, on représente la proportion de pistes de mesure dont le tag est celui de la source.<br>
             Les cartes de bruit orientées vers les sources sonores sont conformes aux attentes et ont été considérées par les habitants lors du séminaire de clôture comme une alternative intéressante aux cartes de bruit classiques.
+          </p>
+          <br>
+          <p>
+            Remarque : les autres tags contenus dans NoiseCapture permettraient de cartographier, entre autres, la présence perçue de voix, d'enfants, de musique, de végétation, de bruits d'eau, de travaux ou de bruits industriels. Un travail qui pourra être envisagé dans le cadre de SonoRezé II.
           </p>
         </div><!-- col-lg-6 -->
       </div>
