--- a/contact.html
+++ b/contact.html
@@ -120,11 +120,14 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./participer/habitant.html" class="dropdown-item border-radius-md">
+              <a href="./participer/habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
               <a href="./participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
+              </a>
+               <a href="./participer/acoustiquiz.html" class="dropdown-item border-radius-md">
+                <span class="ps-3">AcoustiQUIZ</span>
               </a>
 
             </div><!-- navbar big - d-lg-block -->
@@ -137,6 +140,9 @@
               </a>
               <a href="./participer/collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
+              </a>
+              <a href="./participer/acoustiquiz.html" class="dropdown-item border-radius-md">
+                <span class="ps-3">AcoustiQUIZ</span>
               </a>
 
             </div><!-- navbar small - d-lg-none -->
