--- a/participer/acoustiquiz.html
+++ b/participer/acoustiquiz.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href=".../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <title>
-    SonoRezé - Historique
+    SonoRezé - AcoustiQUIZ
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -74,16 +74,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -92,16 +92,16 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
+              <a href="../projet/historique.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Historique</span>
               </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
+              <a href="../projet/demarche.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Démarche</span>
               </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
+              <a href="../projet/territoire.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Territoire</span>
               </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
+              <a href="../projet/equipe.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Équipe</span>
               </a>
 
@@ -121,13 +121,13 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
+           <a href="./habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
+              <a href="./collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
-               <a href="../participer/acoustiquiz.html" class="dropdown-item border-radius-md">
+               <a href="./acoustiquiz.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">AcoustiQUIZ</span>
               </a>
 
@@ -136,13 +136,13 @@
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
+              <a href="./habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
-              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
+              <a href="./collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
               </a>
-              <a href="../participer/acoustiquiz.html" class="dropdown-item border-radius-md">
+              <a href="./acoustiquiz.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">AcoustiQUIZ</span>
               </a>
 
@@ -232,14 +232,13 @@
   <div class="page-header min-vh-50">
   <!--<div class="page-header min-vh-100">-->
     <div class="oblique position-absolute top-0 h-100 d-md-block d-none">
-      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/historique/tonitorfer_bandeau_large.jpg)"></div>
+      <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url(../assets/img/participer_acoustiquiz/tonitorfer_bandeau_large_credit.png)"></div>
     </div>
-
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-7 d-flex justify-content-center flex-column">
-          <h1 class="text-gradient text-primary">Historique</h1>
-          <p class="lead pe-5 me-5">Un projet démarré en 2021 et courant jusqu'en 2025</p>
+          <h1 class="text-gradient text-primary">AcoustiQUIZ</h1>
+          <p class="lead pe-5 me-5">Le quiz qui t'en met plein les oreilles !</p>
         </div>
       </div>
     </div>
@@ -249,146 +248,37 @@
 
 
 
+<section class="py-7">
 
-<!---------------------------------------------------------------------------------------->
-<section class="my-5 py-5">
-  <div class="container mt-sm-5 mt-3">
-<p align="center">Le projet SonoRezé est une initiative démarrée en 2021, puis poursuivie en 2023, financée grâce à deux programmes de recherche décrits ci-dessous.</p>
-</div>
-
-  <!-- Container SonoRezé II -->
-  <div class="container mt-sm-5 mt-3">
+  <div class="container">
     <div class="row">
-      <div class="col-lg-3">
-        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
-          <h3>Sonorezé II</h3>
-          <h6 class="text-secondary font-weight-normal pe-3">2023-2025</h6>
-        </div>
-      </div><!-- col-lg-3 -->
+      <div class="col-lg-12 mx-auto text-center">
+        
+        <p align="center">À travers les 12 questions du quiz ci-dessous, étendez vos connaissances de manière ludique sur le domaine de l'acoustique et sur les enjeux de la réduction du bruit en ville.</p>
 
-      <div class="col-lg-9">
-        <div class="row mt-3">
-
-      <!-- Le projet -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Le projet</h5>
-                <p>Le projet "<b>SonoRezé II</b>" s'inscrit dans la continuité du premier volet "<b>SonoRezé</b>". <br>
-                  Dans le second volet, il s’agira d’approfondir le diagnostic des environnements sonores de la ville de Rezé réalisé dans le premier volet, mais également de définir collectivement quelques actions à mener autour de la problématique des environnements sonores, et de réfléchir au déploiement de cette approche innovante sur une variété de territoires.
-                </p>
-            </div><!-- row -->
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
-
-
-      <!-- Consortium -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Consortium</h5>
-                <p>SonoRezé II est réalisé par les acteurs suivants :</br>
-                  - Collectivité : <a href="https://www.reze.fr/" target="_blank"><b>Ville de Rezé</b></a> </br>
-                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a> / <a href="https://www.cerema.fr/" target="_blank"><b>Cerema</b></a>), Laboratoire "Espaces et SOciétés" (<a href="http://eso.cnrs.fr/eso.cnrs.fr/fr/index.html" target="_blank"><b>ESO</b></a> - UMR 6590 - <a href="https://www.institut-agro-rennes-angers.fr/" target="_blank"><b>Institut Agro Rennes Angers</b></a>)</br>
-                  - Tiers veilleur : <a href="https://www.auxilia-conseil.com/" target="_blank"><b>Auxilia Conseil</b></a>
-                </p>
-                <p>Le pilotage du projet est effectué par l'Université Gustave Eiffel (UMRAE)</p>
-                <img src="../assets/img/historique/consortium_sonoreze_2.png" width="100%">
-            </div><!-- row -->
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
-
-
-      <!-- Financement -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Financement</h5>
-                <p>Le projet "SonoRezé II" est financé par l'<a href="https://anr.fr/" target="_blank"><b>Agence Nationale de la Recherche</b></a> (ANR), dans le cadre de l'<i>Appel à projets Science avec et pour la société – Recherches participatives 1 (SAPS-RA-RP1)</i>. Ce financement, à hauteur de 249 716€, court de 2023 à 2025.
-                </p>
-                <img src="../assets/img/historique/financement_sonoreze_2.png" width="100%">
-            </div><!-- row -->
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
-
-        </div> <!-- row mt-3 -->
-      </div><!-- col-lg-9 -->
+  <iframe src="quiz.html?embed=true" width="100%" height="297" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+      <!-- 1098 -->
+      </div><!-- col-lg-12 --> 
     </div><!-- row -->
+
   </div><!-- container -->
 
 
-  <!-- Container SonoRezé I -->
-  <div class="container mt-sm-5 mt-3">
-    <div class="row">
-      <div class="col-lg-3">
-        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
-          <h3>Sonorezé</h3>
-          <h6 class="text-secondary font-weight-normal pe-3">2021-22</h6>
-        </div>
-      </div><!-- col-lg-3 -->
-
-      <div class="col-lg-9">
-        <div class="row mt-3">
-
-      <!-- Le projet -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Le projet</h5>
-                <p>La Ville de Rezé et l'Université Gustave Eiffel se sont associées pour réaliser un diagnostic citoyen des environnements sonores de la ville de Rezé. Grâce à la forte mobilisation des habitants, une cartographie participative des environnements sonores a été produite. De plus, des groupes de discussion associant habitants, élus et chercheurs, ont questionné la qualité des environnements sonores. Enfin, le projet a fait l'objet d'un rendu intégrant des performances artistiques originales. Ceci a constitué la première expérience de cartographie participative à l’échelle d’une collectivité.</p>
-
-            </div><!-- row -->
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
 
 
-      <!-- Consortium -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Consortium</h5>
-                <p>SonoRezé I a été réalisé par les acteurs suivants :</br>
-                  - Collectivité : <a href="https://www.reze.fr/" target="_blank"><b>Ville de Rezé</b></a> </br>
-                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a> / <a href="https://www.cerema.fr/" target="_blank"><b>Cerema</b></a>)
-                </p>
-                <p>Le pilotage du projet a été effectué par l'Université Gustave Eiffel (UMRAE)</p>
-                <img src="../assets/img/historique/consortium_sonoreze_1.png" width="100%">
-            </div><!-- row -->
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
 
-      <!-- Financement -->
-      <div class="col-12">
-        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
-          <div class="container border-bottom">
-            <div class="row justify-space-between py-2">
-                <h5 class="text-primary text-gradient">Financement</h5>
-                <p>Le projet "SonoRezé I" a été financé par l'<a href="http://www.future-isite.fr/li-site-future/" target="_blank"><b>I-Site Future</b></a> dans le cadre d'un appel d'offre <i>« chercheur.e.s citoyen.ne.s »</i>. Ce financement, pour un montant de 14 418€, courrait de 2021 à juin 2022.
-                </p>
-                <img src="../assets/img/historique/financement_sonoreze_1.png" width="100%">
-            </div><!-- row -->
-          </div><!-- container -->
-        </div>
-      </div><!-- col-12 -->
+ 
 
 
-        </div> <!-- row mt-3 -->
-      </div><!-- col-lg-9 -->
-    </div><!-- row -->
-  </div><!-- container -->
+
+
+
+
+
+
+
 
 </section>
-<!---------------------------------------------------------------------------------------->
 
 
 
@@ -405,7 +295,7 @@
           <p class="my-4 text-sm">
             Auteur : G. Petit (<a href="https://www.umrae.fr/" target="_blank">UMRAE</a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">Université Gustave Eiffel</a>) - 2023</br>
             -</br>
-            Illustration dans le bandeau : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
+            Illustrations : <a href="https://www.facebook.com/tonitorfer/" target="_blank">ToniTorfer</a> - tous droits réservés</br>
             Template du site : All rights reserved. Copyright © <script>document.write(new Date().getFullYear())</script> Soft UI Design System by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
           </p>
         </div>
