--- a/participer/collectivite.html
+++ b/participer/collectivite.html
@@ -121,11 +121,14 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-           <a href="./habitant.html" class="dropdown-item border-radius-md">
+              <a href="./habitant.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes rezéen.ne</span>
               </a>
               <a href="./collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
+              </a>
+               <a href="./acoustiquiz.html" class="dropdown-item border-radius-md">
+                <span class="ps-3">AcoustiQUIZ</span>
               </a>
 
             </div><!-- navbar big - d-lg-block -->
@@ -138,6 +141,9 @@
               </a>
               <a href="./collectivite.html" class="dropdown-item border-radius-md">
                 <span class="ps-3">Vous êtes une collectivité</span>
+              </a>
+              <a href="./acoustiquiz.html" class="dropdown-item border-radius-md">
+                <span class="ps-3">AcoustiQUIZ</span>
               </a>
 
             </div><!-- navbar small - d-lg-none -->
