--- a/actu.html
+++ b/actu.html
@@ -283,18 +283,17 @@
               <h4>
                 Ateliers
               </h4>
-              Les lieux seront définis sous peu
+              Ces réunions, qui ont pour but d'échanger avec les citoyens sur leurs attentes et sur les pistes d'actions à mettre en place, se tiendront à la <a href="https://www.reze.fr/pratique/developpement-durable/la-maison-du-dd/" target="_blank">Maison du Développement Durable</a> :
               <ul>
-                <li>Jeudi 12 octobre : 18h30-20h00</li>
-                <li>Jeudi 16 novembre : 18h30-20h00</li>
-                <li>Mardi 12 décembre : 18h30-20h00</li>
+                <li>Jeudi 12 octobre (18h30-20h00)</li>
+                <li>Jeudi 16 novembre (18h30-20h00)</li>
+                <li>Mardi 12 décembre (18h30-20h00)</li>
               </ul>
 
             </div>
           </div>
         </div>
 
-        
         <div class="col-lg-6 col-sm-6">
           <div class="card card-plain card-blog">
 
@@ -302,63 +301,22 @@
               <h4>
                 Sessions de mesure collectives
               </h4>
-              Les points de rendez-vous seront définis sous peu
+              Venez mesurer les niveaux sonores sur un quartier donné, à l'aide de l'application de <a href="file:///home/gpetit/codes/sonoreze/participer/habitant.html">NoiseCapture</a>. Un rendez-vous collectif et convivial à ne pas manquer !<br>
+              Les lieux seront définis sous peu :
               <ul>
-                <li>Mardi 19 septembre : 18h30-19h30</li>
-                <li>Mercredi 04 octobre: 18h30-19h30</li>
-                <li>Mardi 07 novembre: 18h30-19h30</li>
-                <li>Samedi 02 décembre : 10h30-11h30</li>
+                <li>Mardi 19 septembre (18h30-19h30)</li>
+                <li>Mercredi 04 octobre (18h30-19h30)</li>
+                <li>Mardi 07 novembre (18h30-19h30)</li>
+                <li>Samedi 02 décembre (10h30-11h30)</li>
               </ul>
               
             </div>
           </div>
         </div>
-
-
-
-
-</div><!-- row -->
-
+      </div><!-- row -->
 
     </div>
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
   <!-- -------------------------------------------------------------------------------- -->
