--- a/actu.html
+++ b/actu.html
@@ -301,7 +301,7 @@
               <h4>
                 Sessions de mesure collectives
               </h4>
-              Venez mesurer les niveaux sonores sur un quartier donné, à l'aide de l'application de <a href="file:///home/gpetit/codes/sonoreze/participer/habitant.html">NoiseCapture</a>. Un rendez-vous collectif et convivial à ne pas manquer !<br>
+              Venez mesurer les niveaux sonores sur un quartier donné, à l'aide de l'application de <a href="http://sonoreze.fr/participer/habitant.html">NoiseCapture</a>. Un rendez-vous collectif et convivial à ne pas manquer !<br>
               Les lieux seront définis sous peu :
               <ul>
                 <li>Mardi 19 septembre (18h30-19h30)</li>
