--- a/actu.html
+++ b/actu.html
@@ -302,13 +302,13 @@
                 Sessions de mesure collectives
               </h4>
               Venez mesurer les niveaux sonores sur un quartier donné, à l'aide de l'application de <a href="http://sonoreze.fr/participer/habitant.html">NoiseCapture</a>. Un rendez-vous collectif et convivial à ne pas manquer !<br>
-              Les lieux seront définis sous peu :
               <ul>
-                <li>Mardi 19 septembre (18h30-19h30)</li>
-                <li>Mercredi 04 octobre (18h30-19h30)</li>
-                <li>Mardi 07 novembre (18h30-19h30)</li>
-                <li>Samedi 02 décembre (10h30-11h30)</li>
+                <li>Mardi 19 septembre (18h30-19h30) : <a href="https://www.reze.fr/point-d-interet/evelyne-cretual/" target="_blank">Gymnase Evelyne Crétual</a> (Rue des Déportés)</li>
+                <li>Mercredi 04 octobre (18h30-19h30) : *</li>
+                <li>Mardi 07 novembre (18h30-19h30) : *</li>
+                <li>Samedi 02 décembre (10h30-11h30) : *</li>
               </ul>
+              * Les lieux seront définis sous peu
               
             </div>
           </div>
