--- a/projet/equipe.html
+++ b/projet/equipe.html
@@ -432,6 +432,30 @@
             <div class="row">
               <div class="col-lg-4 col-md-6 col-12 pe-lg-0">
                   <div class="p-3 pe-md-0">
+                    <img class="w-100 border-radius-md" src="../assets/img/equipe/Natalia.jpg" alt="image">
+                  </div>
+              </div>
+              <div class="col-lg-8 col-md-6 col-12 ps-lg-0 my-auto">
+                <div class="card-body">
+                  <h5 class="mb-0">Natalia Oscar Otin</h5>
+                  <h6 class="text-info">Chercheuse en projet de paysage</h6>
+                  <p class="mb-0">UMR 6590 <a href="http://eso.cnrs.fr/eso.cnrs.fr/fr/index.html" target="_blank">ESO</a> ("Espaces et SOciétés") - Institut Agro campus d'Angers</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- class="row mt-4" -->
+
+      <!-- row mt-4 ------------------------------------------------------------->
+      <div class="row mt-4">
+
+        <div class="col-lg-6 col-12">
+          <div class="card card-profile mt-lg-0 mt-5 overflow-hidden">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 col-12 pe-lg-0">
+                  <div class="p-3 pe-md-0">
                     <img class="w-100 border-radius-md" src="../assets/img/equipe/Petit.jpg" alt="image">
                   </div>
               </div>
@@ -445,11 +469,6 @@
             </div>
           </div>
         </div>
-
-      </div><!-- class="row mt-4" -->
-
-      <!-- row mt-4 ------------------------------------------------------------->
-      <div class="row mt-4">
         
         <div class="col-lg-6 col-12">
           <div class="card card-profile mt-lg-0 mt-5 overflow-hidden z-index-2">
@@ -470,6 +489,11 @@
           </div>
         </div>
 
+      </div><!-- class="row mt-4" -->
+
+      <!-- row mt-4 ------------------------------------------------------------->
+      <div class="row mt-4">
+        
         <div class="col-lg-6 col-12">
           <div class="card card-profile mt-lg-0 mt-5 overflow-hidden z-index-2">
             <div class="row">
@@ -490,6 +514,7 @@
         </div>
 
       </div><!-- class="row mt-4" -->
+
 
       <div class="row mt-4">
         <div class="col-md-12 text-start mb-5 mt-5">
